#1 Change request generator
Update the genarator to be available from a webpage and implement logic so that the generator accepts user input for the number of requests sent.

Co-Authored-By: Sandra Smoler Eisenberg <smolers@student.chalmers.se>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ build:
     - docker
   script:
     - npm install
+    - npm build
 
 test:
   stage: test
@@ -20,4 +21,3 @@ test:
     - docker
   script:
     - echo "----- Test Running -----"
-
